--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -49,7 +49,7 @@ jobs:
         run: pip install pyinstaller
 
       - name: Build executable
-        run: pyinstaller --onefile src/__init__.py -n odc_bot
+        run: pyinstaller --onefile src/bot.py -n odc_bot
         shell: bash
 
       - name: Upload artifact
