--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,13 @@ idna==3.10
 multidict==6.1.0
 numpy==2.1.1
 pandas==2.2.2
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.15
+PyQt5_sip==12.15.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+qasync==0.27.1
 six==1.16.0
 tzdata==2024.1
 yarl==1.11.1
