deploy.yaml 파일 수정: USE_LOCAL_CSV 환경 변수를 추가하여 로컬 CSV 사용 설정 가능

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,7 @@ env:
   ECS_SERVICE: odc-discord-bot
   CONTAINER_NAME: odc-discord-bot
   REGION: ap-northeast-2
+  USE_LOCAL_CSV: ${{ vars.USE_LOCAL_CSV }}
 
 permissions:
   contents: read
